--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "dotenv": "^16.3.1",
+    "@openzeppelin/contracts": "^5.0.0",
     "ethers": "^6.7.1",
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
